--- a/styles/style.css
+++ b/styles/style.css
@@ -75,7 +75,7 @@
 
 .cover {
     padding: 165px 50px 50px;
-    background-image: url(/images/cover.jpg);
+    background-image: url(../images/cover.jpg);
     background-position: center;
     background-size: cover;
     display: flex;
@@ -198,15 +198,15 @@
 }
 
 .lots__item:first-child {
-    background-image: url(/images/card-lot-01.jpg);
+    background-image: url(../images/card-lot-01.jpg);
 }
 
 .lots__item:nth-child(2) {
-    background-image: url(/images/card-lot-02.jpg);
+    background-image: url(../images/card-lot-02.jpg);
 }
 
 .lots__item:nth-child(3) {
-    background-image: url(/images/card-lot-03.jpg);
+    background-image: url(../images/card-lot-03.jpg);
 }
 
 
